maze.island.IslandMaze.scala.error
Compilation error:
IslandMaze:9: error: not found: value estSurBiscui
    if(estSurBiscui()){
       ^